# snapcraft-preload-glib-test

./: CMakeLists.txt  README.md  main.c
snap/: snapcraft.yaml
